--- a/blink_led.ioc
+++ b/blink_led.ioc
@@ -18,30 +18,30 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM2
-Mcu.IP5=TIM3
-Mcu.IP6=USART2
-Mcu.IPNb=7
+Mcu.IP5=USART2
+Mcu.IPNb=6
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA6
-Mcu.Pin11=PA7
-Mcu.Pin12=PC6
-Mcu.Pin13=PC7
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=PB3
+Mcu.Pin10=PA7
+Mcu.Pin11=PB10
+Mcu.Pin12=PC7
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PB3
+Mcu.Pin16=PB5
 Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin18=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin5=PA0-WKUP
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA3
-Mcu.Pin9=PA5
-Mcu.PinsNb=18
+Mcu.Pin5=PA1
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA5
+Mcu.Pin9=PA6
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -57,10 +57,11 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
-NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
-PA0-WKUP.Signal=S_TIM2_CH1_ETR
-PA1.Signal=S_TIM2_CH2
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=MOTOR_ENABLE
+PA1.Locked=true
+PA1.Signal=GPIO_Output
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -87,10 +88,15 @@ PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA6.Signal=ADCx_IN6
 PA7.Signal=ADCx_IN7
+PB10.Signal=S_TIM2_CH3
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=MOTOR_ENABLE_CW
+PB5.Locked=true
+PB5.Signal=GPIO_Output
 PC13-ANTI_TAMP.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PC13-ANTI_TAMP.GPIO_Label=B1 [Blue PushButton]
 PC13-ANTI_TAMP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -102,8 +108,10 @@ PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PC6.Signal=S_TIM3_CH1
-PC7.Signal=S_TIM3_CH2
+PC7.GPIOParameters=GPIO_Label
+PC7.GPIO_Label=MOTOR_ENABLE_CCW
+PC7.Locked=true
+PC7.Signal=GPIO_Output
 PH0\ -\ OSC_IN.Locked=true
 PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
@@ -139,7 +147,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -178,26 +186,18 @@ SH.ADCx_IN7.0=ADC1_IN7,IN7
 SH.ADCx_IN7.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Encoder_Interface
-SH.S_TIM2_CH1_ETR.ConfNb=1
-SH.S_TIM2_CH2.0=TIM2_CH2,Encoder_Interface
-SH.S_TIM2_CH2.ConfNb=1
-SH.S_TIM3_CH1.0=TIM3_CH1,Encoder_Interface
-SH.S_TIM3_CH1.ConfNb=1
-SH.S_TIM3_CH2.0=TIM3_CH2,Encoder_Interface
-SH.S_TIM3_CH2.ConfNb=1
-TIM2.EncoderMode=TIM_ENCODERMODE_TI12
-TIM2.IC1Polarity=TIM_ICPOLARITY_FALLING
-TIM2.IC2Polarity=TIM_ICPOLARITY_FALLING
-TIM2.IPParameters=EncoderMode,IC1Polarity,IC2Polarity
-TIM3.EncoderMode=TIM_ENCODERMODE_TI12
-TIM3.IC1Polarity=TIM_ICPOLARITY_FALLING
-TIM3.IC2Polarity=TIM_ICPOLARITY_FALLING
-TIM3.IPParameters=EncoderMode,IC1Polarity,IC2Polarity
+SH.S_TIM2_CH3.0=TIM2_CH3,PWM Generation3 CH3
+SH.S_TIM2_CH3.ConfNb=1
+TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM2.IPParameters=Channel-PWM Generation3 CH3,Prescaler,Period
+TIM2.Period=100-1
+TIM2.Prescaler=84-1
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=NUCLEO-F411RE
 boardIOC=true
 isbadioc=false
