--- a/blink_led.ioc
+++ b/blink_led.ioc
@@ -17,9 +17,11 @@ Mcu.IP0=ADC1
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=TIM2
-Mcu.IP5=USART2
-Mcu.IPNb=6
+Mcu.IP4=TIM1
+Mcu.IP5=TIM2
+Mcu.IP6=TIM4
+Mcu.IP7=USART2
+Mcu.IPNb=8
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -27,13 +29,17 @@ Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PA7
 Mcu.Pin11=PB10
 Mcu.Pin12=PC7
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14
-Mcu.Pin15=PB3
-Mcu.Pin16=PB5
-Mcu.Pin17=VP_SYS_VS_Systick
-Mcu.Pin18=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin13=PA8
+Mcu.Pin14=PA9
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14
+Mcu.Pin17=PB3
+Mcu.Pin18=PB5
+Mcu.Pin19=PB6
 Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=PB7
+Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin22=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PA1
@@ -41,7 +47,7 @@ Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=19
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -88,6 +94,13 @@ PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA6.Signal=ADCx_IN6
 PA7.Signal=ADCx_IN7
+PA8.GPIOParameters=GPIO_PuPd
+PA8.GPIO_PuPd=GPIO_NOPULL
+PA8.Locked=true
+PA8.Signal=S_TIM1_CH1
+PA9.GPIOParameters=GPIO_PuPd
+PA9.GPIO_PuPd=GPIO_NOPULL
+PA9.Signal=S_TIM1_CH2
 PB10.Signal=S_TIM2_CH3
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
@@ -97,6 +110,8 @@ PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=MOTOR_ENABLE_CW
 PB5.Locked=true
 PB5.Signal=GPIO_Output
+PB6.Signal=S_TIM4_CH1
+PB7.Signal=S_TIM4_CH2
 PC13-ANTI_TAMP.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PC13-ANTI_TAMP.GPIO_Label=B1 [Blue PushButton]
 PC13-ANTI_TAMP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -147,7 +162,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -186,12 +201,26 @@ SH.ADCx_IN7.0=ADC1_IN7,IN7
 SH.ADCx_IN7.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.S_TIM1_CH1.0=TIM1_CH1,Encoder_Interface
+SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM1_CH2.0=TIM1_CH2,Encoder_Interface
+SH.S_TIM1_CH2.ConfNb=1
 SH.S_TIM2_CH3.0=TIM2_CH3,PWM Generation3 CH3
 SH.S_TIM2_CH3.ConfNb=1
+SH.S_TIM4_CH1.0=TIM4_CH1,Encoder_Interface
+SH.S_TIM4_CH1.ConfNb=1
+SH.S_TIM4_CH2.0=TIM4_CH2,Encoder_Interface
+SH.S_TIM4_CH2.ConfNb=1
+TIM1.IC1Polarity=TIM_ICPOLARITY_FALLING
+TIM1.IC2Polarity=TIM_ICPOLARITY_FALLING
+TIM1.IPParameters=IC1Polarity,IC2Polarity
 TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM2.IPParameters=Channel-PWM Generation3 CH3,Prescaler,Period
 TIM2.Period=100-1
 TIM2.Prescaler=84-1
+TIM4.IC1Polarity=TIM_ICPOLARITY_FALLING
+TIM4.IC2Polarity=TIM_ICPOLARITY_FALLING
+TIM4.IPParameters=IC1Polarity,IC2Polarity
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
