--- a/blink_led.ioc
+++ b/blink_led.ioc
@@ -95,11 +95,11 @@ PA5.Signal=GPIO_Output
 PA6.Signal=ADCx_IN6
 PA7.Signal=ADCx_IN7
 PA8.GPIOParameters=GPIO_PuPd
-PA8.GPIO_PuPd=GPIO_NOPULL
+PA8.GPIO_PuPd=GPIO_PULLUP
 PA8.Locked=true
 PA8.Signal=S_TIM1_CH1
 PA9.GPIOParameters=GPIO_PuPd
-PA9.GPIO_PuPd=GPIO_NOPULL
+PA9.GPIO_PuPd=GPIO_PULLUP
 PA9.Signal=S_TIM1_CH2
 PB10.Signal=S_TIM2_CH3
 PB3.GPIOParameters=GPIO_Label
@@ -110,7 +110,11 @@ PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=MOTOR_ENABLE_CW
 PB5.Locked=true
 PB5.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_PuPd
+PB6.GPIO_PuPd=GPIO_PULLUP
 PB6.Signal=S_TIM4_CH1
+PB7.GPIOParameters=GPIO_PuPd
+PB7.GPIO_PuPd=GPIO_PULLUP
 PB7.Signal=S_TIM4_CH2
 PC13-ANTI_TAMP.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PC13-ANTI_TAMP.GPIO_Label=B1 [Blue PushButton]
@@ -162,7 +166,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -211,16 +215,18 @@ SH.S_TIM4_CH1.0=TIM4_CH1,Encoder_Interface
 SH.S_TIM4_CH1.ConfNb=1
 SH.S_TIM4_CH2.0=TIM4_CH2,Encoder_Interface
 SH.S_TIM4_CH2.ConfNb=1
+TIM1.EncoderMode=TIM_ENCODERMODE_TI12
 TIM1.IC1Polarity=TIM_ICPOLARITY_FALLING
 TIM1.IC2Polarity=TIM_ICPOLARITY_FALLING
-TIM1.IPParameters=IC1Polarity,IC2Polarity
+TIM1.IPParameters=IC1Polarity,IC2Polarity,EncoderMode
 TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM2.IPParameters=Channel-PWM Generation3 CH3,Prescaler,Period
 TIM2.Period=100-1
 TIM2.Prescaler=84-1
+TIM4.EncoderMode=TIM_ENCODERMODE_TI12
 TIM4.IC1Polarity=TIM_ICPOLARITY_FALLING
 TIM4.IC2Polarity=TIM_ICPOLARITY_FALLING
-TIM4.IPParameters=IC1Polarity,IC2Polarity
+TIM4.IPParameters=IC1Polarity,IC2Polarity,EncoderMode
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
