--- a/blink_led.ioc
+++ b/blink_led.ioc
@@ -26,28 +26,29 @@ Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA7
-Mcu.Pin11=PB10
-Mcu.Pin12=PC7
-Mcu.Pin13=PA8
-Mcu.Pin14=PA9
-Mcu.Pin15=PA13
-Mcu.Pin16=PA14
-Mcu.Pin17=PB3
-Mcu.Pin18=PB5
-Mcu.Pin19=PB6
+Mcu.Pin10=PA6
+Mcu.Pin11=PA7
+Mcu.Pin12=PB10
+Mcu.Pin13=PC7
+Mcu.Pin14=PA8
+Mcu.Pin15=PA9
+Mcu.Pin16=PA13
+Mcu.Pin17=PA14
+Mcu.Pin18=PB3
+Mcu.Pin19=PB5
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB7
-Mcu.Pin21=VP_SYS_VS_Systick
-Mcu.Pin22=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin20=PB6
+Mcu.Pin21=PB7
+Mcu.Pin22=VP_SYS_VS_Systick
+Mcu.Pin23=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin5=PA1
-Mcu.Pin6=PA2
-Mcu.Pin7=PA3
-Mcu.Pin8=PA5
-Mcu.Pin9=PA6
-Mcu.PinsNb=23
+Mcu.Pin5=PC3
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA5
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -123,6 +124,8 @@ PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC3.Locked=true
+PC3.Signal=GPIO_Output
 PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=MOTOR_ENABLE_CCW
 PC7.Locked=true
@@ -162,7 +165,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
