--- a/blink_led.ioc
+++ b/blink_led.ioc
@@ -224,7 +224,8 @@ TIM2.Prescaler=84-1
 TIM4.IC1Polarity=TIM_ICPOLARITY_FALLING
 TIM4.IC2Polarity=TIM_ICPOLARITY_FALLING
 TIM4.IPParameters=IC1Polarity,IC2Polarity
-USART2.IPParameters=VirtualMode
+USART2.BaudRate=115200
+USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
